microservices-workspace/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/microservices-workspace-app-network: "true"
        io.kompose.service: eureka-server
    spec:
      containers:
        - image: eureka-server
          name: eureka-server
          ports:
            - containerPort: 8761
          resources: {}
      restartPolicy: Always
status: {}
